# Soft_Label_Learning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
analyses/: calibration_noise_models.ipynb  gaussian_analysis.ipynb  real_world_analysis.ipynb  synthetic_q1_analysis.ipynb  synthetic_q2_analysis.ipynb  utils.py
data/uci_keel/: keel_car.csv  keel_contraceptive.csv  keel_flare.csv  keel_pima.csv  keel_titanic.csv  keel_vehicle.csv  keel_vowel.csv  uci_abalone.csv  uci_australian.csv  uci_german.csv  uci_mice.csv  uci_nursery.csv  uci_red.csv  uci_white.csv  uci_yeast.csv
experiments/: q2_intermediate_processing.py  run_gaussian_experiment.py  run_mtvd_per_set_lr.py  run_mtvd_per_set_rf.py  run_real_world_experiment.py  run_synthetic_q1_experiment.py  run_synthetic_q2_experiment.py  synthetic_data_preparation.ipynb  synthetic_gt_generation.py
src/soft_label_learning/: config_format.py
src/soft_label_learning/data_generation/: calibration.py  data_extraction.py  dataset_preparation.py
src/soft_label_learning/experiments/: experiment_settings.py  gaussians.py  metrics.py  process_synthetic_data.py  real_world.py  statistical_tests.py  synthetic_data.py  utils.py
src/soft_label_learning/methods/: abstract_methods.py  ensemble_classifiers.py  single_classifiers.py  utils.py
